xenectl: add workflow local run command
