# pkg/apiserver/models/response_workflow_verbose_info.go
@@ -1,0 +1,11 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+// ResponseWorkflowVerboseInfo response workflow verbose info
+//
+// swagger:model response.WorkflowVerboseInfo
+type ResponseWorkflowVerboseInfo interface{}
